--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
   },
   "author": "Nikita Lem",
   "devDependencies": {
+    "@types/gsap": "^1.20.2",
     "@types/pixi.js": "^4.8.9",
     "clean-webpack-plugin": "^0.1.16",
+    "gsap": "^2.1.3",
     "html-webpack-plugin": "^2.30.0",
     "pixi.js": "^4.*.*",
     "script-loader": "^0.7.1",
@@ -18,5 +20,6 @@
     "webpack": "^3.5",
     "webpack-dev-server": "^2.7.1",
     "webpack-merge": "^4.2.2"
-  }
+  },
+  "dependencies": {}
 }
